syntax = "proto3";

package payroll.v1;

option go_package = "https://github.com/antosdaniel/go-presentation-generate-code/gen/grpc/payroll/v1";

// Service

service PayrollService {
  rpc AddPayroll(AddPayrollRequest) returns (AddPayrollResponse);
  rpc AddPayslip(AddPayslipRequest) returns (AddPayslipResponse);
  rpc GetPayroll(GetPayrollRequest) returns (GetPayrollResponse);
}

message AddPayrollRequest {
  string payroll_id = 1;
  string tenant_id = 2;
  string payday = 3;
}

message AddPayrollResponse {
  string payroll_id = 1;
}

message AddPayslipRequest {
  string payroll_id = 1;

  int32 gross_pay = 4;
  int32 tax = 5;
}

message AddPayslipResponse {
  string payslip_id = 1;
}

message GetPayrollRequest {
  string payroll_id = 1;
}

message GetPayrollResponse {
  Payroll payroll = 1;
  repeated Payslip payslips = 2;
}

// Domain

message Payroll {
  string id = 1;
  string tenant_id = 2;
  string payday = 3;
}

message Payslip {
  string id = 1;
  string tenant_id = 2;
  string payroll_id = 3;

  int32 gross_pay = 4;
  int32 tax = 5;
  int32 net_pay = 6;
}
